Add login page for the Admin.

--- a/Web.config
+++ b/Web.config
@@ -11,6 +11,32 @@
       <compilation debug="true" targetFramework="4.5.2" />
       <httpRuntime targetFramework="4.5.2" />
       <customErrors mode="RemoteOnly" defaultRedirect="errorPage.html"/>
+    
+      <authentication mode="Forms">
+        <forms loginUrl="Login.aspx" />
+      </authentication>
+  
     </system.web>
+  
+  
+
+  <location path="MemberPages">
+    <system.web>
+
+      <authorization>
+        <allow users="tsitas,Georgia"/>
+        <deny users="*"/>
+      </authorization>
+
+    </system.web>
+  </location>
+  
+  <location path="Default.aspx">
+    <system.web>
+      <authorization>
+        <allow users="*"/>
+      </authorization>
+    </system.web>
+  </location>
 
 </configuration>
