--- a/Web.config
+++ b/Web.config
@@ -1,42 +1,39 @@
-﻿<?xml version="1.0"?>
-
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
-
 <configuration>
-
-    <system.web>
-      <compilation debug="true" targetFramework="4.5.2" />
-      <httpRuntime targetFramework="4.5.2" />
-      <customErrors mode="RemoteOnly" defaultRedirect="errorPage.html"/>
-    
-      <authentication mode="Forms">
-        <forms loginUrl="Login.aspx" />
-      </authentication>
-  
-    </system.web>
-  
-  
-
+  <system.web>
+    <compilation debug="true" targetFramework="4.5.2">
+      <assemblies>
+        <add assembly="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D" />
+      </assemblies>
+    </compilation>
+    <httpRuntime targetFramework="4.5.2" />
+    <customErrors mode="RemoteOnly" defaultRedirect="errorPage.html" />
+    <authentication mode="Forms">
+      <forms loginUrl="Login.aspx" />
+    </authentication>
+  </system.web>
   <location path="MemberPages">
     <system.web>
-
       <authorization>
-        <allow users="tsitas,Georgia"/>
-        <deny users="*"/>
+        <allow users="tsitas,Georgia" />
+        <deny users="*" />
       </authorization>
-
     </system.web>
   </location>
-  
   <location path="Default.aspx">
     <system.web>
       <authorization>
-        <allow users="*"/>
+        <allow users="*" />
       </authorization>
     </system.web>
   </location>
-
-</configuration>
+<system.data>
+    <DbProviderFactories>
+      <remove invariant="MySql.Data.MySqlClient" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    </DbProviderFactories>
+  </system.data></configuration>
